--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,14 @@
 baseURL = "https://lunk-liu.github.io/tentaplugg/"
 languageCode = "en-us"
-title = "Minimal"
+title = "TDDD38 tentaplugg #5"
 theme = "minimal"
 #disqusShortname = "username" # delete this to disable disqus comments
 #googleAnalytics = ""
+publishDir = "docs"
 
 [params]
-    author = "Calin Tataru"
-    description = "Personal blog theme powered by Hugo"
+    author = "Oscar Lundqvist"
+    description = "TDDD38 tentaplugg #5"
     githubUsername = "#"
     accent = "brown"
     showBorder = false
