--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ publishDir = "docs"
 
 [params]
     author = "Oscar Lundqvist"
-    description = "TDDD38 tentaplugg #5"
+    description = "Hitta alla gamla tentor under Tags"
     githubUsername = "#"
     accent = "brown"
     showBorder = false
@@ -34,10 +34,10 @@ publishDir = "docs"
     name = "Tags"
     weight = 3
 
-[[menu.main]]
-    url = "/project/"
-    name = "Projects"
-    weight = 4
+#[[menu.main]]
+#    url = "/project/"
+#    name = "Projects"
+#    weight = 4
 
 # Social icons to be shown on the right-hand side of the navigation bar
 # The "name" field should match the name of the icon to be used
